Fix categories section z-index to prevent going under header while scrolling

--- a/main/website/style.css
+++ b/main/website/style.css
@@ -2375,7 +2375,8 @@ img {
     padding: 1.5rem 0;
     position: sticky;
     top: 0;
-    z-index: 998;
+    z-index: 999;
+    margin-top: 0;
   }
   
   .categories .container {
